add hover and active to buttom learn more

--- a/assets/css/homePageSec2.css
+++ b/assets/css/homePageSec2.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500;700&family=Dancing+Script:wght@500;600&display=swap");
 * {
   --sec2FontColor: #ffffff;
+  --hover: #C29DE8;
+  --press:#AE73EA;
+
 }
 
 .section2 {
@@ -11,10 +14,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
   width: 100%;
   height: fit-content;
-  /* top: 900px; */
+  top: 900px;
 }
 .video-background {
   width: 1440px;
@@ -82,4 +85,17 @@
   background-color: transparent;
   border: 8px var(--sec2FontColor) solid;
   border-radius: 100px;
+}
+
+.learnBtn:hover{
+  background-color: var(--hover);
+  border-color: var(--hover);
+  color: var(--sec2FontColor);
+}
+
+
+.learnBtn:active {
+  background-color: var(--press);
+  border-color: var(--press);
+  color: var(--sec2FontColor);
 }
