--- a/assets/css/HomePage_section5.css
+++ b/assets/css/HomePage_section5.css
@@ -20,7 +20,7 @@
   width: 100%;
   height: 909px;
   /* border: red solid 2px; */
-  top: 3541px;
+  top: 3547px;
 }
 
 .HM_sec5_content {
@@ -54,7 +54,7 @@
   padding: 0;
   /* border: green solid 2px; */
   position: absolute;
-  width: 763px;
+  width: 669px;
   height: 144px;
   font-family: "Aileron";
   font-weight: 400;
@@ -73,14 +73,21 @@
   padding: 0;
 }
 
-.HM_sec5_writeBtn {
+
+.HM_sec5_writeBtn_a {
   position: absolute;
+  top: 640px;
+  z-index: 3;
+}
+
+.HM_sec5_writeBtn {
+  /* position: absolute; */
   width: 390px;
   height: 95px;
   font-family: "Barlow Condensed";
   font-weight: 700;
   font-size: 46px;
-  top: 640px;
+  /* top: 640px; */
   color: var(--sec2FontColor);
   background-color: inherit;
   border: 8px var(--sec2FontColor) solid;
