--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -114,3 +114,12 @@ footer {
   margin-left: 68px;
   padding: 0;
 }
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;  
+  text-align: center;
+  z-index: 1000;
+  background-color: #fff;
+}
