--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -10,6 +10,10 @@
   font-weight: 400;
   line-height: normal;
   letter-spacing: 0.3375rem;
+  position: relative;
+  top: 120px;
+  
+
   }
   
   .section-one {
