--- a/assets/css/HomePage_section3.css
+++ b/assets/css/HomePage_section3.css
@@ -55,6 +55,7 @@ border: 6px solid #C29DE8;
 padding: 0px 24px 24px 24px;
 width:  330px;
 height: 549px;
+transition: transform 0.3s;
 }
 
 .project:hover {
@@ -66,6 +67,7 @@ font-weight: 600;
 line-height: 72px;
 letter-spacing: 0.045em;
 text-align: center;
+transform: scale(1.2);
 }
 
 .project:hover h3 {
@@ -101,7 +103,7 @@ text-align: center;
 a.projects_link {
     text-transform: uppercase;
     position: relative;
-    top: 30px;
+    top: 55px;
     font-family: Barlow Condensed;
     font-size: 48px;
     font-weight: 700;
