--- a/assets/css/projectsPage/projects.css
+++ b/assets/css/projectsPage/projects.css
@@ -2,7 +2,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    /* position: absolute; */
+    flex-direction: column;
     top: 2053px;
     width: 100%;
+    gap: 85px;
+   
 }
