--- a/assets/css/projectsPage/oldProjects.css
+++ b/assets/css/projectsPage/oldProjects.css
@@ -127,7 +127,7 @@
   font-size: 64px; /* Adjust as needed */
   position: absolute;
   right: 100px;
-  color: #0d8fba;
+  color: #2AABEE;
   background-color: white;
   border-radius: 50%; /* This makes it round */
   width: 40px; /* Adjust as needed */
