--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -102,11 +102,8 @@ footer {
   font-size: 12px;
 }
 .logo-image {
-  position: absolute;
-  width: 25%;
-  height: auto;
-  opacity: 0.5;
-  z-index: -1;
+  width: 165px;
+  height: 125px;
 }
 .logo-div {
   position: relative;
