--- a/assets/css/aboutPageCss/aboutPage_section3.css
+++ b/assets/css/aboutPageCss/aboutPage_section3.css
@@ -4,52 +4,60 @@
 * {
   --text_color_1: #4c6b5f;
   --box_colr: #c29de8;
-  
 }
 
-.about_section3_list ,.about_section3_txt5{
-    width: 100%;
+.about_section3_list,
+.about_section3_txt5 {
+  width: 100%;
 }
-.about_section3_list ul{
-    display: block;
+.about_section3_list ul {
+  display: block;
 }
 
-
-
-
-
+.about_section3_txt5 a {
+  color: inherit;
+}
 
 .about_section3 {
   width: 1440px;
-  height: 1010px;
+  height: 1100px;
   position: relative;
   /* border: 1px red solid; */
+  margin-top: 52px;
 }
 
-.whoweare_img_about_sec2_container {
+.whoweare_img_about_sec3_container {
+  width: 632px;
+  height: 783px;
+  position: absolute;
+  top: 96px;
+  left: 64px;
+ 
+  /* border: 1px red solid; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.img_about_sec32 {
+  width: 472.021px;
+  height: 242.9735px;
+  flex-shrink: 0;
+
+  /* position: absolute; */
+  text-align: center;
+  margin: 0 auto;
+}
+.img_about_sec3 {
   width: 632px;
   height: 540px;
-  position: absolute;
-  top: 199px;
-  left: 744px;
-  border-radius: 100px;
-  background-color: var(--box_colr);
-  z-index: 1;
-  /* border: 1px red solid; */
-}
+  flex-shrink: 0;
 
-.whoweare_img_about_sec2 {
-  width: 632px;
-  height: 405px;
-  position: absolute;
-  /* top: 138px; */
-  left: 0px;
-  bottom: 0px;
   z-index: 3;
-  border-radius: 0 0 100px 100px;
+  border-radius: 80px;
 }
-
-.about_section2_title {
+.about_section3_title {
   margin: 0;
   padding: 0;
   position: absolute;
@@ -59,15 +67,16 @@
   font-weight: 500;
   font-size: 80px;
   top: 0;
-  left: 64px;
+  left: 836px;
   color: var(--text_color_1);
+
 }
-.about_section2_text {
-  width: 640px;
-  height: 890px;
+.about_section3_text {
+  width: 639px;
+  height: 980px;
   position: absolute;
   top: 120px;
-  left: 64px;
+  left: 736px;
   font-family: "aileron";
   font-size: 30px;
   color: var(--text_color_1);
@@ -76,7 +85,4 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-
 }
-
-
