--- a/assets/css/projectsPage/oldProjects.css
+++ b/assets/css/projectsPage/oldProjects.css
@@ -79,6 +79,7 @@
   margin: 0;
   padding: 0;
   width: fit-content;
+  width: 651px;
   height: 72x;
   font-family: "Barlow Condensed";
   font-weight: 600;
