Width in section 1 and 3 set to 100%

--- a/assets/css/HomePage_section3.css
+++ b/assets/css/HomePage_section3.css
@@ -1,6 +1,6 @@
 .section-three {
     background-color: #4C6B5F;
-    width: 1440px;  
+    width: 100%;  
     height: 918px;
     position: absolute;
     top: 1710px;
