--- a/assets/css/HomePage_section3.css
+++ b/assets/css/HomePage_section3.css
@@ -68,6 +68,7 @@ line-height: 72px;
 letter-spacing: 0.045em;
 text-align: center;
 transform: scale(1.1);
+cursor: pointer;
 }
 
 .project:hover h3 {
