--- a/assets/css/aboutPageCss/aboutPage_section2.css
+++ b/assets/css/aboutPageCss/aboutPage_section2.css
@@ -8,6 +8,7 @@
 }
 .about_section2 {
   width: 1440px;
+  max-width: 100%;
   height: 1010px;
   position: relative;
   /* border: 1px red solid; */
