--- a/assets/css/aboutPageCss/aboutPage_section3.css
+++ b/assets/css/aboutPageCss/aboutPage_section3.css
@@ -20,6 +20,7 @@
 
 .about_section3 {
   width: 1440px;
+  max-width: 100%;
   height: 1100px;
   position: relative;
   /* border: 1px red solid; */
