--- a/assets/css/projectsPage/projects.css
+++ b/assets/css/projectsPage/projects.css
@@ -9,3 +9,7 @@
     gap: 85px;
    
 }
+
+#reclaim-the-soil, #reclaim-literature, #reclaim-politics, #reclaim-words, #reclaim-the-streets, #reclaim-it-all {
+    max-width: 95%;
+}
