--- a/assets/css/HomePage_section2.css
+++ b/assets/css/HomePage_section2.css
@@ -101,7 +101,7 @@
 }
 
 /* Style the link and its container */
-a[href="https://www.youtube.com/watch?v=S4mVbO1B6mg"] {
+#link-btn {
   display: flex; /* Use flexbox to center the button vertically and horizontally */
   justify-content: center;
   align-items: center;
@@ -113,7 +113,7 @@ a[href="https://www.youtube.com/watch?v=S4mVbO1B6mg"] {
 }
 
 /* Style the button */
-a[href="https://www.youtube.com/watch?v=S4mVbO1B6mg"] .learnBtn {
+#link-btn .learnBtn {
   background-color: transparent;
   border: 8px solid var(--sec2FontColor);
   border-radius: 100px;
@@ -124,13 +124,13 @@ a[href="https://www.youtube.com/watch?v=S4mVbO1B6mg"] .learnBtn {
 }
 
 /* Hover and active states */
-a[href="https://www.youtube.com/watch?v=S4mVbO1B6mg"]:hover .learnBtn {
+#link-btn:hover .learnBtn {
   background-color: var(--hover);
   border-color: var(--hover);
   cursor: pointer;
 }
 
-a[href="https://www.youtube.com/watch?v=S4mVbO1B6mg"]:active .learnBtn {
+#link-btn:active .learnBtn {
   background-color: var(--press);
   border-color: var(--press);
 }
