--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -200,13 +200,10 @@ footer {
   font-weight: 500;
   line-height: 40px;
 }
-/* .logoParagraph {
-  font-weight: 100 !important;
-  color: #c29de8;
-} */
+
 .projects-section1-h1 {
   color: #4c6b5f;
-  font-family: Barlow Condensed;
+  font-family: "Barlow Condensed";
   font-size: 100px;
   font-style: normal;
   font-weight: 600;
@@ -227,8 +224,8 @@ footer {
 .custom-button {
   display: inline-block;
   padding: 8px 24px;
-  color: #ffffff; /* This is a white color, but you can choose any color */
-  background-color: #4c6b5f; /* Color from other buttons in your CSS */
+  color: #ffffff; 
+  background-color: #4c6b5f; 
   text-decoration: none;
   border-radius: 100px;
   font-family: "Barlow Condensed", sans-serif;
@@ -238,5 +235,5 @@ footer {
 }
 
 .custom-button:hover {
-  background-color: #3a564b; /* Darkened version of the original color */
+  background-color: #3a564b; 
 }
