Width adjusted to 1440px

--- a/assets/css/HomePage_section2.css
+++ b/assets/css/HomePage_section2.css
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  width: 100%;
+  width: 1440px;
   height: fit-content;
   top: 900px;
 }
