--- a/assets/css/HomePage_section5.css
+++ b/assets/css/HomePage_section5.css
@@ -17,7 +17,7 @@
   align-items: center;
   /* justify-content: center; */
   position: absolute;
-  width: 100%;
+  width: 1440px;
   height: 909px;
   /* border: red solid 2px; */
   top: 3547px;
