--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -19,6 +19,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 1440px;
+    max-width: 100%;
   }
   
   .main-title {
