--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -19,7 +19,7 @@
   align-items: center;
   /* justify-content: center; */
   position: absolute;
-  width: 100%;
+  width: 1440px;
   height: 909px;
   top: 2635px;
   /* border: red solid 2px; */
