--- a/assets/css/HomePage_section5.css
+++ b/assets/css/HomePage_section5.css
@@ -18,7 +18,7 @@
   /* justify-content: center; */
   position: absolute;
 
-  width: 100%;
+  width: 1440px;
   height: 1053px;
   /* border: red solid 2px; */
   top: 3544px;
