Picture in section 4 and about page changed

--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -72,11 +72,11 @@
 
 .HM_4_teamImg {
   position: absolute;
-
   width: 932px;
   height: 611.99px;
   top: 302.6px;
   z-index: 2;
+  border-radius: 100px;
 }
 .HM_4_ImgBG {
   position: absolute;
