--- a/assets/css/aboutPageCss/aboutPage_section2.css
+++ b/assets/css/aboutPageCss/aboutPage_section2.css
@@ -15,7 +15,7 @@
 
 .whoweare_img_about_sec2_container {
   width: 632px;
-  height: 540px;
+  height: 405px;
   position: absolute;
   top: 199px;
   left: 744px;
@@ -33,7 +33,7 @@
   left: 0px;
   bottom: 0px;
   z-index: 3;
-  border-radius: 0 0 100px 100px;
+  border-radius: 100px;
 }
 
 .about_section2_title {
