--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -103,7 +103,7 @@ cursor: pointer;
   
   }
 
-  @media screen and (max-width: 768px) and (min-width: 480px) {
+  @media screen and (max-width: 768px) and (min-width: 481px) {
     .main-title {
       left: 150px
     }
@@ -112,5 +112,10 @@ cursor: pointer;
       left: 100px;
     }
   }
-  
+
+  @media screen and (max-width: 1048px) and (min-width: 769px) {
+    .main-title {
+      left: 130px;
+    }
+  }
   
