--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,7 +4,7 @@
   position: relative;
   top: 266em;
   bottom: 0;
-  width: 100%;
+  width: 1440px;
   height: 144px;
   flex-shrink: 0;
   display: flex;
